--- a/level.html
+++ b/level.html
@@ -1,262 +1,255 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<title>ZenSite | Black Zen</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Black Zen | Estado Activo</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
 <style>
+:root{
+  --bg:#050505;
+  --glass:rgba(18,18,18,.85);
+  --line:rgba(255,255,255,.12);
+  --muted:rgba(255,255,255,.75);
+  --muted2:rgba(255,255,255,.55);
+  --accent:#ffffff;
+}
+
 *{margin:0;padding:0;box-sizing:border-box}
-html,body{touch-action:manipulation}
 
 body{
-  font-family:'Montserrat',system-ui,-apple-system,sans-serif;
+  font-family:'Inter',system-ui;
   background:
-    radial-gradient(900px 500px at 50% 10%, rgba(0,120,255,.22), transparent 60%),
-    radial-gradient(800px 600px at 20% 85%, rgba(0,255,150,.18), transparent 65%),
+    radial-gradient(900px 500px at 50% 0%, rgba(255,255,255,.06), transparent 60%),
     #050505;
   color:#fff;
 }
 
-/* ===== TOP BAR ===== */
-.topbar{
-  position:fixed;
-  top:0;left:0;width:100%;
-  height:64px;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:0 22px;
-  background:rgba(5,5,5,.55);
-  backdrop-filter:blur(14px);
-  z-index:1000;
-}
-.topbar a{
-  color:#fff;
-  text-decoration:none;
-  font-weight:700;
-  opacity:.85;
-}
-.langs span{
-  margin-left:14px;
-  cursor:pointer;
-  font-weight:700;
-  opacity:.5;
-}
-.langs .active{opacity:1}
-
-/* ===== WRAP ===== */
-.wrap{
-  padding:120px 7% 130px;
-  max-width:1150px;
-  margin:0 auto;
+/* ===== LAYOUT ===== */
+section{
+  max-width:1100px;
+  margin:auto;
+  padding:120px 8%;
 }
 
-/* ===== TITLES ===== */
+h1,h2,h3{
+  font-family:'Playfair Display',serif;
+}
+
 h1{
-  font-size:clamp(42px,6vw,76px);
-  font-weight:900;
-  letter-spacing:-1px;
+  font-size:clamp(42px,6vw,78px);
 }
-h1 span{color:#aaa}
 
-.intro{
-  margin-top:26px;
-  max-width:760px;
+h2{
+  font-size:clamp(32px,5vw,56px);
+  margin-bottom:22px;
+}
+
+p{
   font-size:18px;
-  opacity:.9;
-  line-height:1.7;
+  color:var(--muted);
+  line-height:1.85;
+}
+
+/* ===== HERO ===== */
+.hero{
+  text-align:center;
+}
+
+.hero p{
+  max-width:860px;
+  margin:30px auto 0;
+}
+
+/* ===== BLOCK ===== */
+.block{
+  background:var(--glass);
+  border:1px solid var(--line);
+  border-radius:28px;
+  padding:46px;
+  margin-top:60px;
+  backdrop-filter:blur(18px);
 }
 
 /* ===== LIST ===== */
 .list{
-  margin-top:90px;
-  display:grid;
-  gap:18px;
+  margin-top:28px;
 }
 
-.item{
-  background:rgba(255,255,255,.06);
-  border:1px solid rgba(255,255,255,.14);
-  border-radius:22px;
-  padding:24px 28px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  backdrop-filter:blur(14px);
-}
-
-.item span{
-  opacity:.92;
-  line-height:1.5;
-}
-
-.price{
-  font-weight:900;
-  white-space:nowrap;
-}
-
-/* ===== BLACK ZEN ===== */
-.blackzen{
-  margin-top:120px;
-  padding:52px;
-  border-radius:30px;
-  background:
-    linear-gradient(135deg, rgba(255,255,255,.16), rgba(255,255,255,.05));
-  border:1px solid rgba(255,255,255,.28);
-  text-align:center;
-  box-shadow:0 45px 120px rgba(0,0,0,.7);
-}
-
-.blackzen h2{
-  font-size:clamp(36px,5vw,60px);
-  font-weight:900;
-}
-
-.blackzen p{
-  margin-top:24px;
-  font-size:18px;
-  opacity:.95;
-  line-height:1.75;
-}
-
-.blackzen ul{
-  margin-top:30px;
+.list li{
   list-style:none;
-  display:grid;
-  gap:14px;
-  font-size:17px;
-  opacity:.95;
-}
-
-.blackzen ul li{
-  position:relative;
-  padding-left:22px;
-}
-.blackzen ul li::before{
-  content:"✓";
-  position:absolute;
-  left:0;
-  color:#7dffbf;
-  font-weight:900;
-}
-
-.price-big{
-  margin-top:34px;
-  font-size:52px;
-  font-weight:900;
-}
-
-/* ===== NOTE ===== */
-.note{
-  margin-top:90px;
-  text-align:center;
+  padding:14px 0;
+  border-bottom:1px solid rgba(255,255,255,.08);
   font-size:16px;
-  opacity:.7;
-  line-height:1.6;
+  color:var(--muted);
+}
+
+.list li:last-child{border:none}
+
+/* ===== STATUS ===== */
+.status{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:30px;
+  margin-top:50px;
+}
+
+.status div{
+  padding:36px;
+  border-radius:24px;
+  border:1px solid var(--line);
+  background:rgba(0,0,0,.35);
+}
+
+.status h3{
+  font-size:22px;
+  margin-bottom:14px;
+}
+
+/* ===== PRICE ===== */
+.price{
+  text-align:center;
+  margin-top:80px;
+}
+
+.price h2{
+  margin-bottom:14px;
+}
+
+.amount{
+  font-size:72px;
+  font-weight:800;
+  letter-spacing:-1px;
+}
+
+.note{
+  margin-top:12px;
+  font-size:15px;
+  color:var(--muted2);
+}
+
+/* ===== CTA ===== */
+.cta{
+  margin-top:40px;
+}
+
+.cta a{
+  display:inline-block;
+  padding:20px 46px;
+  border-radius:999px;
+  background:#fff;
+  color:#000;
+  font-weight:800;
+  text-decoration:none;
+  transition:.25s;
+}
+
+.cta a:hover{
+  transform:scale(1.05);
+}
+
+/* ===== FOOTER ===== */
+footer{
+  text-align:center;
+  padding:60px 20px;
+  font-size:14px;
+  opacity:.55;
+  border-top:1px solid rgba(255,255,255,.08);
+  margin-top:120px;
+}
+
+/* ===== MOBILE ===== */
+@media(max-width:820px){
+  .status{grid-template-columns:1fr}
 }
 </style>
 </head>
 
 <body>
 
-<div class="topbar">
-  <a href="index.html">← Inicio</a>
-  <div class="langs">
-    <span class="active">ES</span>
-    <span>EN</span>
-  </div>
-</div>
+<section class="hero">
+  <h1>Tu web funciona.<br>Pero… ¿está activa?</h1>
 
-<div class="wrap">
-
-  <h1>
-    <span>Mantenimiento</span><br>
-    profesional continuo
-  </h1>
-
-  <p class="intro">
-    Una web bien hecha no se abandona.  
-    Con el tiempo hay cambios, mejoras, ajustes y optimizaciones que
-    mantienen el sitio rápido, actualizado y alineado con el negocio.
+  <p>
+    Una web puede estar online y aun así perder velocidad, valor y conversión con el tiempo.
+    El mercado cambia, la tecnología cambia y los hábitos de los clientes también.
+    <br><br>
+    La pregunta no es si tu web funciona hoy, sino si seguirá siendo relevante mañana.
   </p>
+</section>
 
-  <div class="list">
+<section class="block">
+  <h2>Lo que una web moderna necesita para mantenerse activa</h2>
 
-    <div class="item">
-      <span>Actualización de textos, precios, horarios o información</span>
-      <span class="price">$40</span>
-    </div>
+  <ul class="list">
+    <li>Optimización continua de velocidad y rendimiento</li>
+    <li>Ajustes visuales para evitar que se vea desactualizada</li>
+    <li>Adaptación a cambios de Google y navegadores</li>
+    <li>Optimización móvil según nuevos dispositivos</li>
+    <li>Correcciones invisibles que evitan errores futuros</li>
+    <li>Protección básica contra ataques y comportamientos sospechosos</li>
+    <li>Prevención de fraudes, formularios falsos y spam</li>
+    <li>Mejoras de conversión según comportamiento real de usuarios</li>
+    <li>Actualización de secciones cuando el negocio crece</li>
+  </ul>
+</section>
 
-    <div class="item">
-      <span>Ajustes de diseño, orden visual o estética general</span>
-      <span class="price">$60</span>
-    </div>
-
-    <div class="item">
-      <span>Optimización de velocidad y rendimiento</span>
-      <span class="price">$50</span>
-    </div>
-
-    <div class="item">
-      <span>Agregar nuevas secciones o páginas completas</span>
-      <span class="price">$70</span>
-    </div>
-
-    <div class="item">
-      <span>Mejoras móviles y compatibilidad en dispositivos</span>
-      <span class="price">$45</span>
-    </div>
-
-    <div class="item">
-      <span>Correcciones técnicas, errores o ajustes internos</span>
-      <span class="price">$40</span>
-    </div>
-
-    <div class="item">
-      <span>Integración de nuevas funciones, formularios o herramientas</span>
-      <span class="price">$80</span>
-    </div>
-
-    <div class="item">
-      <span>Optimización SEO básica y estructura interna</span>
-      <span class="price">$60</span>
-    </div>
-
-  </div>
-
-  <div class="blackzen">
-    <h2>Black Zen Membership</h2>
-
+<section class="status">
+  <div>
+    <h3>Web estándar</h3>
     <p>
-      Acceso completo y permanente a todos los cambios,
-      mejoras y optimizaciones del sitio.
-    </p>
-
-    <ul>
-      <li>Sin pagos mensuales</li>
-      <li>Sin límites de solicitudes</li>
-      <li>Prioridad total en cambios</li>
-      <li>Web siempre actualizada y optimizada</li>
-      <li>Soporte técnico continuo</li>
-      <li>Evolución del sitio conforme crece el negocio</li>
-    </ul>
-
-    <div class="price-big">$250 · pago único</div>
-
-    <p>
-      Diseñado para negocios que no quieren preocuparse
-      cada vez que necesiten cambiar o mejorar su web.
+      La web permanece online y funcional.<br>
+      No se cae.<br><br>
+      Pero no recibe mejoras, no se optimiza y no evoluciona con el negocio.
+      Con el tiempo, pierde impacto y eficiencia.
     </p>
   </div>
+
+  <div>
+    <h3>Estado Black Zen</h3>
+    <p>
+      Tu web se mantiene activa, optimizada y protegida.<br><br>
+      Cada ajuste, mejora o corrección necesaria se realiza sin fricción.
+      Tu web evoluciona contigo, no se queda atrás.
+    </p>
+  </div>
+</section>
+
+<section class="price">
+  <h2>Black Zen Membresía</h2>
+
+  <div class="amount">$420</div>
 
   <div class="note">
-    Cada sitio se construye desde cero y se mantiene con criterio profesional.<br>
-    No son plantillas. No es mantenimiento genérico.<br>
-    Es un sistema pensado para durar y crecer contigo.
+    Pago único · Acceso de por vida<br>
+    Cambios, ajustes, optimizaciones y mejoras incluidas
   </div>
 
-</div>
+  <div class="cta">
+    <a href="https://wa.me/XXXXXXXXXX" target="_blank">
+      Activar Black Zen
+    </a>
+  </div>
+</section>
+
+<section class="block">
+  <p>
+    Black Zen no es obligatorio.<br><br>
+    Tu web seguirá funcionando aunque no lo actives.
+    <br><br>
+    Pero los negocios que se toman en serio su presencia online
+    no dejan su web estática.
+    <br><br>
+    No es mantenimiento.<br>
+    Es protección de valor.
+  </p>
+</section>
+
+<footer>
+  © 2025 ZenSite · Sistemas web activos
+</footer>
 
 </body>
 </html>
