--- a/level.html
+++ b/level.html
@@ -3,17 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Black Zen | Estado Activo</title>
+<title>Black Zen · Control Total</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
 <style>
 :root{
-  --bg:#050505;
-  --glass:rgba(18,18,18,.85);
+  --bg:#040404;
+  --glass:rgba(18,18,18,.9);
   --line:rgba(255,255,255,.12);
   --muted:rgba(255,255,255,.75);
-  --muted2:rgba(255,255,255,.55);
+  --accent:#ffffff;
 }
 
 *{margin:0;padding:0;box-sizing:border-box}
@@ -21,221 +21,225 @@
 body{
   font-family:'Inter',system-ui;
   background:
-    radial-gradient(900px 500px at 50% 0%, rgba(255,255,255,.06), transparent 60%),
-    #050505;
+    radial-gradient(900px 400px at 50% -10%, rgba(255,255,255,.08), transparent 60%),
+    #040404;
   color:#fff;
+  overflow-x:hidden;
 }
 
-/* ===== LAYOUT ===== */
 section{
-  max-width:1100px;
+  max-width:1200px;
   margin:auto;
-  padding:120px 8%;
+  padding:140px 8%;
 }
 
 h1,h2,h3{
   font-family:'Playfair Display',serif;
 }
 
-h1{font-size:clamp(42px,6vw,78px)}
-h2{font-size:clamp(32px,5vw,56px);margin-bottom:22px}
-h3{font-size:24px;margin-bottom:14px}
+h1{
+  font-size:clamp(46px,6vw,88px);
+  text-align:center;
+}
 
 p{
   font-size:18px;
   color:var(--muted);
-  line-height:1.85;
+  line-height:1.9;
 }
 
-/* ===== HERO ===== */
-.hero{text-align:center}
-.hero p{max-width:860px;margin:30px auto 0}
+/* HERO */
+.hero p{
+  max-width:900px;
+  margin:40px auto 0;
+  text-align:center;
+}
 
-/* ===== BLOCK ===== */
+/* SEPARATOR */
+.sep{
+  height:1px;
+  background:linear-gradient(to right, transparent, rgba(255,255,255,.25), transparent);
+  margin:120px auto;
+  max-width:600px;
+}
+
+/* BLOCK */
 .block{
   background:var(--glass);
   border:1px solid var(--line);
-  border-radius:28px;
-  padding:46px;
-  margin-top:60px;
-  backdrop-filter:blur(18px);
+  border-radius:34px;
+  padding:60px;
+  margin-top:80px;
+  backdrop-filter:blur(22px);
+  box-shadow:0 40px 120px rgba(0,0,0,.7);
+  animation:up 1s ease both;
 }
 
-/* ===== LIST ===== */
-.list{margin-top:28px}
-.list li{
+@keyframes up{
+  from{opacity:0;transform:translateY(40px)}
+  to{opacity:1;transform:none}
+}
+
+/* COST LIST */
+.cost li{
   list-style:none;
-  padding:14px 0;
+  padding:18px 0;
   border-bottom:1px solid rgba(255,255,255,.08);
-  font-size:16px;
-  color:var(--muted);
-}
-.list li:last-child{border:none}
-
-/* ===== STATUS ===== */
-.status{
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:30px;
-  margin-top:50px;
-}
-.status div{
-  padding:36px;
-  border-radius:24px;
-  border:1px solid var(--line);
-  background:rgba(0,0,0,.35);
+  display:flex;
+  justify-content:space-between;
+  font-size:17px;
 }
 
-/* ===== PRICE ===== */
-.price{text-align:center;margin-top:80px}
-.amount{
-  font-size:72px;
-  font-weight:800;
-  letter-spacing:-1px;
-}
-.note{
-  margin-top:12px;
-  font-size:15px;
-  color:var(--muted2);
+.cost span{
+  font-weight:700;
 }
 
-/* ===== CTA ===== */
-.cta{margin-top:40px}
-.cta a{
-  display:inline-block;
-  padding:20px 46px;
-  border-radius:999px;
-  background:#fff;
-  color:#000;
-  font-weight:800;
-  text-decoration:none;
-  transition:.25s;
+/* TOTAL */
+.total{
+  margin-top:40px;
+  font-size:26px;
+  text-align:right;
 }
-.cta a:hover{transform:scale(1.05)}
 
-/* ===== FOOTER ===== */
-footer{
+/* BIG PRICE */
+.big-price{
   text-align:center;
-  padding:60px 20px;
-  font-size:14px;
-  opacity:.55;
-  border-top:1px solid rgba(255,255,255,.08);
   margin-top:120px;
 }
 
-@media(max-width:820px){
-  .status{grid-template-columns:1fr}
+.big-price .amount{
+  font-size:88px;
+  font-weight:900;
+  margin-top:20px;
 }
+
+/* CTA */
+.cta{
+  margin-top:50px;
+  text-align:center;
+}
+
+.cta a{
+  padding:24px 60px;
+  border-radius:999px;
+  background:#fff;
+  color:#000;
+  font-weight:900;
+  text-decoration:none;
+  display:inline-block;
+  transition:.3s;
+}
+
+.cta a:hover{
+  transform:scale(1.08);
+}
+
+/* ZEN ACCESS */
+.access{
+  margin-top:160px;
+  padding:80px;
+  border-radius:40px;
+  background:
+    radial-gradient(400px 200px at 50% 0%, rgba(255,255,255,.12), transparent),
+    rgba(0,0,0,.75);
+  border:1px solid var(--line);
+  text-align:center;
+}
+
+.lock{
+  font-size:54px;
+  margin-bottom:20px;
+  animation:pulse 2.5s infinite;
+}
+
+@keyframes pulse{
+  0%,100%{transform:scale(1)}
+  50%{transform:scale(1.08)}
+}
+
+/* FOOTER */
+footer{
+  text-align:center;
+  padding:80px 20px;
+  font-size:14px;
+  opacity:.6;
+  border-top:1px solid rgba(255,255,255,.08);
+  margin-top:160px;
+}
+
 </style>
 </head>
 
 <body>
 
-<!-- HERO -->
 <section class="hero">
-  <h1>Tu web funciona.<br>Pero… ¿está activa?</h1>
+  <h1>Tu web está online.<br>Eso no significa que esté ganando.</h1>
   <p>
-    Una web puede estar online y aun así perder velocidad, valor y conversión con el tiempo.
+    Muchas webs no fallan.<br>
+    Simplemente se quedan atrás.
     <br><br>
-    La tecnología cambia. El mercado cambia.  
-    La pregunta real es si tu web cambia contigo.
+    Y cuando eso pasa, el negocio paga el precio en silencio.
   </p>
 </section>
 
-<!-- NECESIDADES -->
+<div class="sep"></div>
+
 <section class="block">
-  <h2>Lo que una web moderna necesita constantemente</h2>
-  <ul class="list">
-    <li>Optimización continua de velocidad y rendimiento</li>
-    <li>Ajustes visuales para no verse desactualizada</li>
-    <li>Adaptación a cambios de Google y navegadores</li>
-    <li>Optimización móvil para nuevos dispositivos</li>
-    <li>Correcciones técnicas invisibles pero críticas</li>
-    <li>Protección contra spam, bots y formularios falsos</li>
-    <li>Prevención básica de fraude digital</li>
-    <li>Mejoras de conversión según comportamiento real</li>
-    <li>Actualizaciones cuando el negocio evoluciona</li>
+  <h2>Lo que una web empieza a necesitar con el tiempo</h2>
+  <ul class="cost">
+    <li>Optimización constante de velocidad <span>$80</span></li>
+    <li>Ajustes visuales para no verse vieja <span>$60</span></li>
+    <li>Correcciones técnicas invisibles <span>$70</span></li>
+    <li>Protección y prevención de fraude <span>$90</span></li>
+    <li>Mejoras de conversión reales <span>$120</span></li>
+    <li>Adaptación cuando el negocio crece <span>$150</span></li>
   </ul>
-</section>
 
-<!-- COMPARACIÓN -->
-<section class="status">
-  <div>
-    <h3>Web estándar</h3>
-    <p>
-      La web sigue online.<br>
-      No se cae.<br><br>
-      Pero no mejora, no se optimiza y no evoluciona.
-      Con el tiempo, pierde impacto y autoridad.
-    </p>
-  </div>
-
-  <div>
-    <h3>Estado Black Zen</h3>
-    <p>
-      Tu web se mantiene activa, protegida y optimizada.<br><br>
-      Cada ajuste necesario se realiza sin fricción.
-      La web evoluciona contigo.
-    </p>
+  <div class="total">
+    Total acumulado normal: <strong>$570+</strong>
   </div>
 </section>
 
-<!-- BLACK ZEN -->
-<section class="price">
-  <h2>Black Zen Membership</h2>
-  <div class="amount">$420</div>
-  <div class="note">
-    Pago único · Acceso de por vida<br>
-    Ajustes, mejoras, optimización y protección incluidos
-  </div>
-  <div class="cta">
-    <a href="https://wa.me/XXXXXXXXXX" target="_blank">Activar Black Zen</a>
-  </div>
-</section>
-
-<!-- ACLARACIÓN -->
-<section class="block">
+<section class="big-price">
+  <h2>Black Zen</h2>
   <p>
-    Black Zen no es obligatorio.<br><br>
-    Tu web seguirá funcionando sin él.<br><br>
-    Pero los negocios serios no dejan su web estática.
-    <br><br>
     No es mantenimiento.<br>
-    Es protección de valor digital.
+    Es control total de tu web a largo plazo.
   </p>
+
+  <div class="amount">$420</div>
+  <p>Pago único · De por vida</p>
+
+  <div class="cta">
+    <a href="https://wa.me/XXXXXXXXXX">Activar Black Zen</a>
+  </div>
 </section>
 
-<!-- ZEN ACCESS -->
-<section class="block">
+<section class="access">
+  <div class="lock">🔒</div>
   <h2>Zen Access</h2>
   <p>
-    Zen Access es para quienes quieren estar dentro.<br><br>
-    No es mantenimiento, ni soporte.
-    Es acceso prioritario al futuro de ZenSite.
+    Para quienes quieren estar dentro.<br>
+    Antes que los demás.
   </p>
 
-  <ul class="list">
-    <li>Acceso anticipado a nuevas herramientas y funciones</li>
-    <li>Prioridad para futuras apps y sistemas privados</li>
-    <li>Integraciones exclusivas no liberadas al público</li>
-    <li>Invitaciones cerradas a proyectos piloto</li>
-    <li>Beneficios reservados solo para miembros activos</li>
+  <ul class="cost">
+    <li>Acceso anticipado a nuevas herramientas</li>
+    <li>Prioridad para apps privadas</li>
+    <li>Integraciones cerradas al público</li>
+    <li>Invitaciones a proyectos piloto</li>
   </ul>
 
-  <div class="price">
-    <div class="amount">$69</div>
-    <div class="note">
-      Pago inicial único<br>
-      + $5 mensuales automáticos para mantener el acceso activo
-    </div>
-    <div class="cta">
-      <a href="https://wa.me/XXXXXXXXXX" target="_blank">Entrar a Zen Access</a>
-    </div>
+  <div class="amount">$29</div>
+  <p>Entrada única + $5 mensuales para mantener el acceso</p>
+
+  <div class="cta">
+    <a href="https://wa.me/XXXXXXXXXX">Entrar a Zen Access</a>
   </div>
 </section>
 
 <footer>
-  © 2025 ZenSite · Sistemas web activos
+  © 2025 ZenSite · Control web real
 </footer>
 
 </body>
