--- a/level.html
+++ b/level.html
@@ -794,6 +794,163 @@ footer{
   .calc-wrap{grid-template-columns:1fr}
   .amount{font-size:68px}
 }
+/* =====================================================
+   ZEN ACCESS PRO · ZENCREDIT (NIVEL ÉLITE)
+===================================================== */
+
+.access.pro{
+  margin-top:64px;
+  background:
+    radial-gradient(900px 320px at 20% 0%, rgba(89,183,255,.16), transparent 60%),
+    radial-gradient(900px 360px at 85% 0%, rgba(255,213,106,.18), transparent 65%),
+    linear-gradient(180deg, rgba(255,255,255,.06), rgba(0,0,0,.38));
+  border:1px solid rgba(255,255,255,.18);
+  border-radius:32px;
+  padding:54px;
+  box-shadow:0 45px 140px rgba(0,0,0,.85);
+  position:relative;
+  overflow:hidden;
+}
+
+.access.pro::before{
+  content:"";
+  position:absolute;
+  inset:-2px;
+  background:
+    radial-gradient(700px 260px at 15% 0%, rgba(255,255,255,.10), transparent 60%),
+    radial-gradient(820px 300px at 90% 0%, rgba(85,255,209,.10), transparent 65%);
+  opacity:.9;
+  pointer-events:none;
+}
+
+.access.pro > *{position:relative; z-index:1}
+
+/* HEADER */
+.access-pro-top{
+  display:flex;
+  justify-content:space-between;
+  align-items:flex-start;
+  gap:20px;
+  flex-wrap:wrap;
+}
+
+.access-pro-tag{
+  display:inline-flex;
+  align-items:center;
+  gap:10px;
+  padding:10px 14px;
+  border-radius:999px;
+  border:1px solid rgba(255,213,106,.35);
+  background:rgba(255,213,106,.10);
+  font-size:12px;
+  letter-spacing:.16em;
+  text-transform:uppercase;
+  font-weight:900;
+}
+
+.access.pro h2{
+  margin-top:14px;
+  font-size:clamp(34px,5vw,56px);
+  letter-spacing:-.4px;
+}
+
+/* DESCRIPTION */
+.access-pro-desc{
+  margin-top:18px;
+  max-width:980px;
+  font-size:18px;
+  color:var(--muted);
+  line-height:1.9;
+}
+
+/* GRID */
+.access-pro-grid{
+  margin-top:34px;
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:18px;
+}
+@media(max-width:820px){
+  .access-pro-grid{grid-template-columns:1fr}
+}
+
+.access-pro-card{
+  border:1px solid rgba(255,255,255,.14);
+  background:rgba(0,0,0,.32);
+  border-radius:24px;
+  padding:22px;
+  transition:.35s ease;
+}
+.access-pro-card:hover{
+  transform:translateY(-3px);
+  background:rgba(255,255,255,.06);
+  border-color:rgba(255,213,106,.35);
+}
+
+.access-pro-card .t{
+  font-weight:900;
+  letter-spacing:.2px;
+}
+.access-pro-card .d{
+  margin-top:8px;
+  font-size:15px;
+  color:var(--muted2);
+  line-height:1.75;
+}
+
+/* PRICE */
+.access-pro-price{
+  margin-top:36px;
+  padding-top:22px;
+  border-top:1px solid rgba(255,255,255,.12);
+  display:flex;
+  justify-content:space-between;
+  align-items:flex-end;
+  gap:18px;
+  flex-wrap:wrap;
+}
+
+.access-pro-price .big{
+  font-size:52px;
+  font-weight:900;
+  letter-spacing:-1px;
+}
+.access-pro-price .big span{
+  font-size:14px;
+  color:var(--muted2);
+  font-weight:700;
+}
+
+.access-pro-price .note{
+  font-size:14px;
+  color:var(--muted2);
+  line-height:1.7;
+}
+
+/* CTA */
+.access-pro-actions{
+  display:flex;
+  gap:12px;
+  flex-wrap:wrap;
+}
+.access-pro-actions .btn{
+  padding:16px 26px;
+  border-radius:999px;
+  font-weight:900;
+}
+.access-pro-actions .btn.primary{
+  background:linear-gradient(90deg,#fff,#ffd56a);
+  color:#000;
+  box-shadow:0 0 40px rgba(255,213,106,.35);
+}
+
+/* SUB NOTE */
+.access-pro-foot{
+  margin-top:20px;
+  font-size:14px;
+  color:var(--muted2);
+  line-height:1.75;
+}
 </style>
 </head>
 
@@ -1019,56 +1176,194 @@ footer{
   </p>
 </section>
 
-<!-- ZEN ACCESS -->
+<!-- ZEN ACCESS · ACCESO PRIVADO + ZENCREDIT -->
 <section class="access reveal" id="zenaccess">
   <div class="accessTop">
     <div>
-      <div class="lock">🔒 <b>ZEN ACCESS</b> · Comunidad cerrada</div>
-      <h2 style="margin-top:12px">Prioridad para lo que viene</h2>
+      <div class="lock">🔒 <b>ZEN ACCESS</b> · Comunidad privada</div>
+      <h2 style="margin-top:12px">Ventaja que no existe afuera</h2>
     </div>
-    <div class="badge" style="border-color:rgba(85,255,209,.22); background:rgba(85,255,209,.08);">
-      Acceso temprano
+    <div class="badge" style="border-color:rgba(255,213,106,.28); background:rgba(255,213,106,.10);">
+      Acceso limitado
     </div>
   </div>
 
   <p>
-    Zen Access es para clientes que quieren estar <b>dentro</b> antes que el público.
-    Acceso anticipado a nuevas herramientas, integraciones y funciones que lanzaremos para el ecosistema ZenSite.
+    Zen Access no es una membresía.
     <br><br>
-    No es para todo el mundo. Es para los que quieren prioridad, upgrades primero y el “pase” a lo nuevo.
+    Es <b>estar dentro</b> de un sistema cerrado que une tecnología,
+    información real y acceso prioritario a soluciones que
+    <b>no están disponibles para el público</b>.
+    <br><br>
+    Mientras otros dependen de apps genéricas,
+    aquí tienes contexto, lectura clara y caminos reales.
+  </p>
+
+  <div class="divider"></div>
+
+  <h3 style="font-family:'Playfair Display',serif;font-size:30px;margin-bottom:16px">
+    ZenCredit · Mucho más que una app
+  </h3>
+
+  <p>
+    ZenCredit será una <b>agencia real de reparación de crédito</b>
+    respaldada por tecnología propia.
+    <br><br>
+    No es otra app que solo te muestra números.
+    Es un sistema que <b>explica, detecta y actúa</b>.
   </p>
 
   <div class="accessGrid">
     <div class="perk">
-      <div class="t">Prioridad en nuevas funciones</div>
-      <div class="d">Lo nuevo sale primero para Zen Access: integraciones, módulos y automatizaciones.</div>
+      <div class="t">Lectura real del crédito</div>
+      <div class="d">
+        No solo scores.
+        Factores internos, errores, patrones y decisiones que
+        están afectando tu crédito ahora mismo.
+      </div>
     </div>
+
     <div class="perk">
-      <div class="t">Reservado para cupos limitados</div>
-      <div class="d">Tu “puesto” se mantiene activo y te da acceso cuando algo sea limitado.</div>
+      <div class="t">Cosas que las apps actuales no dan</div>
+      <div class="d">
+        Señales ocultas, alertas inteligentes y contexto.
+        No “subió / bajó”.
+        <b>Por qué pasó y qué hacer</b>.
+      </div>
     </div>
+
     <div class="perk">
-      <div class="t">Precios preferenciales</div>
-      <div class="d">Cuando salga una mejora nueva, los de dentro reciben prioridad y precio preferente.</div>
+      <div class="t">Soluciones gratuitas dentro de la app</div>
+      <div class="d">
+        Pasos reales que puedes aplicar tú mismo
+        antes de pagar cualquier servicio.
+      </div>
     </div>
+
     <div class="perk">
-      <div class="t">Soporte + guía estratégica</div>
-      <div class="d">No solo cambios: decisiones. Qué hacer primero para convertir más y verse más premium.</div>
+      <div class="t">Historial y control continuo</div>
+      <div class="d">
+        Evolución, impacto de decisiones y cambios claros,
+        no gráficos vacíos.
+      </div>
+    </div>
+  </div>
+
+  <div class="divider"></div>
+
+  <h3 style="font-family:'Playfair Display',serif;font-size:30px;margin-bottom:16px">
+    Ventaja real por ser parte de la comunidad
+  </h3>
+
+  <p>
+    Los miembros de Zen Access tendrán
+    <b>uso gratuito de la app ZenCredit</b>.
+    <br><br>
+    Y si decides escalar tu crédito con la agencia,
+    no entras como cliente común.
+    Entras <b>con prioridad y descuentos exclusivos</b>.
+  </p>
+
+  <div class="accessGrid">
+    <div class="perk">
+      <div class="t">Uso gratis de ZenCredit</div>
+      <div class="d">
+        La app completa incluida mientras estés dentro
+        de Zen Access.
+      </div>
+    </div>
+
+    <div class="perk">
+      <div class="t">Prioridad en reparación de crédito</div>
+      <div class="d">
+        Evaluaciones antes que el público
+        y respuesta más rápida.
+      </div>
+    </div>
+
+    <div class="perk">
+      <div class="t">Descuentos por pertenecer</div>
+      <div class="d">
+        Precios especiales solo para miembros
+        cuando trabajes con la agencia.
+      </div>
+    </div>
+
+    <div class="perk">
+      <div class="t">Acceso a asistencia profesional</div>
+      <div class="d">
+        No bots.
+        Orientación real cuando decidas avanzar.
+      </div>
+    </div>
+  </div>
+
+  <div class="divider"></div>
+
+  <h3 style="font-family:'Playfair Display',serif;font-size:30px;margin-bottom:16px">
+    Por qué Zen Access tiene mensualidad
+  </h3>
+
+  <p>
+    No pagas por soporte.
+    <br><br>
+    Pagas por <b>mantener tu puesto activo</b>
+    dentro de una comunidad cerrada.
+    <br><br>
+    Cuando sales, el acceso se cierra.
+    El puesto queda disponible para otro.
+  </p>
+
+  <div class="accessGrid">
+    <div class="perk">
+      <div class="t">Acceso continuo</div>
+      <div class="d">
+        Mantienes tu lugar, tus beneficios
+        y tu prioridad.
+      </div>
+    </div>
+
+    <div class="perk">
+      <div class="t">Sistema no masivo</div>
+      <div class="d">
+        No se abre a todo el mundo.
+        Se protege el valor.
+      </div>
+    </div>
+
+    <div class="perk">
+      <div class="t">Evolución constante</div>
+      <div class="d">
+        Lo que entra nuevo,
+        entra primero aquí.
+      </div>
+    </div>
+
+    <div class="perk">
+      <div class="t">Visión a largo plazo</div>
+      <div class="d">
+        No es parche.
+        Es estructura.
+      </div>
     </div>
   </div>
 
   <div class="accessPrice">
     <div>
-      <div class="big">$29 <span style="font-size:14px; color:var(--muted2); font-weight:700">inicio</span></div>
-      <div class="small">Luego <b>$5/mes</b> automático solo para mantenerte dentro.<br>Cancelas cuando quieras. Pierdes el puesto.</div>
+      <div class="big">$29.99 <span style="font-size:14px; color:var(--muted2); font-weight:700">inicio</span></div>
+      <div class="small">
+        Luego <b>$10/mes</b> automático para mantener el acceso.<br>
+        Sales cuando quieras. El acceso se cierra.
+      </div>
     </div>
+
     <div style="display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-end;">
-      <a class="btn primary" href="https://wa.me/XXXXXXXXXX" target="_blank" rel="noopener">Entrar a Zen Access</a>
-      <button class="btn" type="button" id="calcAccessBtn">Comparar con mi total</button>
+      <a class="btn primary" href="https://wa.me/XXXXXXXXXX" target="_blank" rel="noopener">
+        Solicitar acceso
+      </a>
     </div>
   </div>
 </section>
-
 <!-- FINAL BLOCK (keeps your intention, but more premium wording) -->
 <section class="block reveal">
   <h2>Claro, tu web puede quedarse igual.</h2>
@@ -1294,3 +1589,4 @@ document.querySelectorAll('a[href^="#"]').forEach(a=>{
 
 </body>
 </html>
+
