--- a/level.html
+++ b/level.html
@@ -951,6 +951,10 @@ footer{
   color:var(--muted2);
   line-height:1.75;
 }
+/* ===== BLOCK DOUBLE TAP ZOOM (iOS / Mobile) ===== */
+html, body{
+  touch-action: manipulation;
+}
 </style>
 </head>
 
@@ -1176,194 +1180,133 @@ footer{
   </p>
 </section>
 
-<!-- ZEN ACCESS · ACCESO PRIVADO + ZENCREDIT -->
-<section class="access reveal" id="zenaccess">
+<!-- =====================================================
+     ZEN ACCESS · ACCESO PRIVADO · COMING SOON
+===================================================== -->
+<section class="access reveal" id="zenaccess" style="position:relative;">
+
+  <!-- COMING SOON ARRIBA DURO -->
+  <div style="
+    position:absolute;
+    top:18px;
+    right:18px;
+    padding:10px 14px;
+    border-radius:999px;
+    border:1px solid rgba(255,213,106,.45);
+    background:rgba(255,213,106,.18);
+    font-size:12px;
+    letter-spacing:.16em;
+    font-weight:900;
+    text-transform:uppercase;
+    box-shadow:0 0 22px rgba(255,213,106,.25);
+    z-index:5;
+  ">
+    🔒 COMING SOON
+  </div>
+
   <div class="accessTop">
     <div>
       <div class="lock">🔒 <b>ZEN ACCESS</b> · Comunidad privada</div>
-      <h2 style="margin-top:12px">Ventaja que no existe afuera</h2>
-    </div>
-    <div class="badge" style="border-color:rgba(255,213,106,.28); background:rgba(255,213,106,.10);">
-      Acceso limitado
+      <h2 style="margin-top:14px">
+        Esto no es para ahora.<br>
+        Es para los que ven antes que los demás.
+      </h2>
     </div>
   </div>
 
   <p>
-    Zen Access no es una membresía.
+    Zen Access <b>no es una membresía común</b>.
     <br><br>
-    Es <b>estar dentro</b> de un sistema cerrado que une tecnología,
-    información real y acceso prioritario a soluciones que
-    <b>no están disponibles para el público</b>.
+    Es un <b>acceso privado</b> al ecosistema que ZenSite está construyendo
+    para personas que quieren <b>ventaja real</b>, información clara
+    y prioridad antes de que todo se vuelva público.
     <br><br>
-    Mientras otros dependen de apps genéricas,
-    aquí tienes contexto, lectura clara y caminos reales.
-  </p>
-
-  <div class="divider"></div>
-
-  <h3 style="font-family:'Playfair Display',serif;font-size:30px;margin-bottom:16px">
-    ZenCredit · Mucho más que una app
-  </h3>
-
-  <p>
-    ZenCredit será una <b>agencia real de reparación de crédito</b>
-    respaldada por tecnología propia.
-    <br><br>
-    No es otra app que solo te muestra números.
-    Es un sistema que <b>explica, detecta y actúa</b>.
+    Aunque el acceso podrá asegurarse,
+    <b>la plataforma aún no está disponible</b>.
+    Cuando se abra, no será para todo el mundo.
   </p>
 
   <div class="accessGrid">
+
     <div class="perk">
-      <div class="t">Lectura real del crédito</div>
+      <div class="t">ZenCredit · App privada</div>
       <div class="d">
-        No solo scores.
-        Factores internos, errores, patrones y decisiones que
-        están afectando tu crédito ahora mismo.
+        Zen Access incluye acceso exclusivo a <b>ZenCredit</b>,
+        una aplicación diseñada para mostrar tu crédito
+        de forma clara, real y sin adornos.
+        <br><br>
+        No solo verás números:
+        entenderás <b>qué lo afecta, por qué y cómo corregirlo</b>.
+        <br><br>
+        Funciones que <b>las apps tradicionales no ofrecen</b>.
+        <br><br>
+        <b>Incluida sin costo</b> para miembros de Zen Access.
       </div>
     </div>
 
     <div class="perk">
-      <div class="t">Cosas que las apps actuales no dan</div>
+      <div class="t">Agencia profesional de reparación de crédito</div>
       <div class="d">
-        Señales ocultas, alertas inteligentes y contexto.
-        No “subió / bajó”.
-        <b>Por qué pasó y qué hacer</b>.
+        ZenCredit no es solo una app.
+        <br><br>
+        Detrás existe una <b>agencia real de reparación de crédito</b>
+        para quienes quieran llevar su perfil financiero a otro nivel.
+        <br><br>
+        Los miembros de Zen Access tendrán
+        <b>descuentos exclusivos, prioridad y trato preferencial</b>
+        al trabajar con la agencia.
       </div>
     </div>
 
     <div class="perk">
-      <div class="t">Soluciones gratuitas dentro de la app</div>
+      <div class="t">Soluciones que no están afuera</div>
       <div class="d">
-        Pasos reales que puedes aplicar tú mismo
-        antes de pagar cualquier servicio.
+        Zen Access es para quienes quieren entender el sistema,
+        no solo usarlo.
+        <br><br>
+        Estrategias, información y caminos
+        que <b>no están disponibles para el público general</b>.
+        <br><br>
+        Aquí no hay promesas vacías.
+        Hay estructura, claridad y ventaja.
       </div>
     </div>
 
     <div class="perk">
-      <div class="t">Historial y control continuo</div>
+      <div class="t">Prioridad absoluta</div>
       <div class="d">
-        Evolución, impacto de decisiones y cambios claros,
-        no gráficos vacíos.
+        Todo lo nuevo del ecosistema Zen
+        se habilita primero aquí.
+        <br><br>
+        Acceso anticipado, cupos limitados
+        y prioridad cuando algo no alcanza para todos.
+        <br><br>
+        Zen Access no se repite.
+        El que está dentro, está dentro.
       </div>
     </div>
+
   </div>
 
-  <div class="divider"></div>
-
-  <h3 style="font-family:'Playfair Display',serif;font-size:30px;margin-bottom:16px">
-    Ventaja real por ser parte de la comunidad
-  </h3>
-
-  <p>
-    Los miembros de Zen Access tendrán
-    <b>uso gratuito de la app ZenCredit</b>.
-    <br><br>
-    Y si decides escalar tu crédito con la agencia,
-    no entras como cliente común.
-    Entras <b>con prioridad y descuentos exclusivos</b>.
-  </p>
-
-  <div class="accessGrid">
-    <div class="perk">
-      <div class="t">Uso gratis de ZenCredit</div>
-      <div class="d">
-        La app completa incluida mientras estés dentro
-        de Zen Access.
-      </div>
-    </div>
-
-    <div class="perk">
-      <div class="t">Prioridad en reparación de crédito</div>
-      <div class="d">
-        Evaluaciones antes que el público
-        y respuesta más rápida.
-      </div>
-    </div>
-
-    <div class="perk">
-      <div class="t">Descuentos por pertenecer</div>
-      <div class="d">
-        Precios especiales solo para miembros
-        cuando trabajes con la agencia.
-      </div>
-    </div>
-
-    <div class="perk">
-      <div class="t">Acceso a asistencia profesional</div>
-      <div class="d">
-        No bots.
-        Orientación real cuando decidas avanzar.
-      </div>
-    </div>
-  </div>
-
-  <div class="divider"></div>
-
-  <h3 style="font-family:'Playfair Display',serif;font-size:30px;margin-bottom:16px">
-    Por qué Zen Access tiene mensualidad
-  </h3>
-
-  <p>
-    No pagas por soporte.
-    <br><br>
-    Pagas por <b>mantener tu puesto activo</b>
-    dentro de una comunidad cerrada.
-    <br><br>
-    Cuando sales, el acceso se cierra.
-    El puesto queda disponible para otro.
-  </p>
-
-  <div class="accessGrid">
-    <div class="perk">
-      <div class="t">Acceso continuo</div>
-      <div class="d">
-        Mantienes tu lugar, tus beneficios
-        y tu prioridad.
-      </div>
-    </div>
-
-    <div class="perk">
-      <div class="t">Sistema no masivo</div>
-      <div class="d">
-        No se abre a todo el mundo.
-        Se protege el valor.
-      </div>
-    </div>
-
-    <div class="perk">
-      <div class="t">Evolución constante</div>
-      <div class="d">
-        Lo que entra nuevo,
-        entra primero aquí.
-      </div>
-    </div>
-
-    <div class="perk">
-      <div class="t">Visión a largo plazo</div>
-      <div class="d">
-        No es parche.
-        Es estructura.
-      </div>
-    </div>
-  </div>
-
-  <div class="accessPrice">
+  <div class="accessPrice" style="margin-top:28px; opacity:.65;">
     <div>
-      <div class="big">$29.99 <span style="font-size:14px; color:var(--muted2); font-weight:700">inicio</span></div>
+      <div class="big">No disponible aún</div>
       <div class="small">
-        Luego <b>$10/mes</b> automático para mantener el acceso.<br>
-        Sales cuando quieras. El acceso se cierra.
+        Zen Access se activará cuando el sistema esté listo.<br>
+        Aunque puedas asegurar tu lugar, el acceso será más adelante.
       </div>
     </div>
 
-    <div style="display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-end;">
-      <a class="btn primary" href="https://wa.me/XXXXXXXXXX" target="_blank" rel="noopener">
-        Solicitar acceso
-      </a>
+    <div style="display:flex; gap:10px; flex-wrap:wrap;">
+      <button class="btn" type="button" disabled
+        style="cursor:not-allowed; opacity:.6;">
+        🔒 Coming Soon
+      </button>
     </div>
   </div>
+
 </section>
+<!-- ================= FIN ZEN ACCESS ================= -->
 <!-- FINAL BLOCK (keeps your intention, but more premium wording) -->
 <section class="block reveal">
   <h2>Claro, tu web puede quedarse igual.</h2>
@@ -1589,4 +1532,5 @@ document.querySelectorAll('a[href^="#"]').forEach(a=>{
 
 </body>
 </html>
+
 
