--- a/index.html
+++ b/index.html
@@ -96,18 +96,22 @@ body{
 .hero .cta{
   margin-top:42px;
   display:flex;
-  gap:22px; /* más separados */
+  gap:32px; /* más separación a la derecha */
   flex-wrap:wrap;
 }
 
 .hero .cta a{
-  display:inline-block;
+  display:inline-flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
   padding:18px 36px;
   border-radius:18px;
   font-weight:900;
   text-decoration:none;
   transition:.35s ease;
   position:relative;
+  text-align:center;
 }
 
 /* ===== VER PLANES ===== */
@@ -126,7 +130,7 @@ body{
     0 0 28px rgba(255,255,255,.45);
 }
 
-/* ===== LEVEL BUTTON ===== */
+/* ===== OPCIONES (NEXT LEVEL) ===== */
 .level-btn{
   background:rgba(255,255,255,.14);
   color:#fff;
@@ -153,6 +157,19 @@ body{
   box-shadow:
     0 18px 55px rgba(0,0,0,.75),
     0 0 34px rgba(255,255,255,.35);
+}
+
+.level-btn .main{
+  font-size:18px;
+  letter-spacing:.5px;
+}
+
+.level-btn .sub{
+  margin-top:4px;
+  font-size:11px;
+  font-weight:700;
+  letter-spacing:1.5px;
+  opacity:.7;
 }
 
 /* ===== LAPTOP ===== */
@@ -284,7 +301,11 @@ footer{
   <!-- CTA -->
   <div class="cta reveal">
     <a href="planes.html" data-es="Ver planes" data-en="View plans">Ver planes</a>
-    <a href="level.html" class="level-btn" data-es="Level" data-en="Level">Level</a>
+
+    <a href="level.html" class="level-btn">
+      <span class="main">Opciones</span>
+      <span class="sub">(Next Level)</span>
+    </a>
   </div>
 
   <div class="laptop reveal">
